libosso (1.4-1) unstable; urgency=low

  * Removed hidden attribute for appname_to_valid_path_component(),
    because GCC 3.4 did not like it.
  * Fixed illegal frees in osso-mime.c (N#23108).
  * Mime struct in osso context is now allocated with the context.
  * Autosave struct in osso context is now allocated with the context.

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Fri, 24 Feb 2006 15:41:13 +0200

libosso (1.3-1) unstable; urgency=low

  * Fixed calling of dbus_bus_request_name DBus function (N#22620).
  * Fixed calling of dbus_connection_register_object_path -- error needed
    ignoring (N#22620).
  * Logging redirected to stderr, since there's no syslogd now.

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Mon, 06 Feb 2006 14:25:35 +0200

libosso (1.2-1) unstable; urgency=low

  * Re-run autogen.sh to get LIBOSSO_DEBUG undefined.
  * Applied patch to osso-mem.c to fix swap issue (N#22468).

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Mon, 30 Jan 2006 17:34:36 +0200

libosso (1.1-1) unstable; urgency=low

  * '.' is now accepted in application names (N#22416).
  * Replaced some 'free' with 'g_free'.
  * Added some internal validation functions.
  * More minimalist version numbering.
  * Removed irritating massive debug output.
  * Found and plugged some memory leaks from osso-rpc.c and osso-cp-plugin.
  * Added some error logging and coding style improvements in osso-rpc.c.
  * Using now RTLD_LAZY in osso-cp-plugin dlopen().
  * Removed some dbus_connection_flushes from osso-rpc.c.
  * Fixed memory leak in osso-init.c (N#18850).
  * Fixed memory leak when setting callback for time notification (N#21059).
  * Removed the effect of osso_initialize's 'activation' argument -- now
    Libosso always connects to both session and system bus.

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Wed, 25 Jan 2006 19:44:00 +0200

libosso (1.0.2-2) unstable; urgency=low

  * Improved documentation for osso_initialize to include facts about